# noman-cli

./: .env.example  .gitignore  01_model_adapter.md  02_self_improvement.md  03_security_sandboxing.md  04_cli_surface.md  05_testing_framework.md  06_observability_debugging.md  07_editor_integrations.md  08_error_handling_recovery.md  09_performance_optimization.md  10_collaboration_multi_user.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOMAN_DESIGN.md  README.md  REMAINING_PLANS.md  REMAINING_PLANS_FIXED.md  RUN.md  SECURITY.md  SUPERPROJECT.md  context.md  memory.md  orchestrator.md  pyproject.toml  tools.md
.github/workflows/: ci.yml
cli/: config_validator.py  main.py  parser.py  tui.py
cli/tui/: package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
cli/tui_gateway/: entry.py  event_publisher.py  render.py  server.py  slash_worker.py  transport.py  ws.py
core/adapters/: __init__.py  anthropic.py  base.py  custom.py  dashscope.py  deepseek.py  factory.py  gemini.py  glm.py  huggingface.py  kimi.py  minimax.py  minimax_cn.py  mistral.py  negotiator.py  nvidia.py  openai.py  perplexity.py  router.py  sambanova.py  together.py  voyage.py  xai.py
core/auth/: __init__.py  credential_pool.py
core/browser/: __init__.py  engine.py  interceptor.py  sandbox.py  session.py  snapshot.py
core/context/: __init__.py  manager.py
core/cron/: __init__.py  delivery.py  jobs.py  manager.py  scheduler.py  storage.py  triggers.py
core/delegation/: __init__.py  context.py  manager.py  results.py  session.py  worker.py
core/email/: __init__.py  client.py  search.py  send.py
core/errors/: __init__.py  circuit_breaker.py
core/gateway/: __init__.py  base.py  discord.py  feishu.py  homeassistant.py  matrix.py  router.py  scheduler.py  signal.py  slack.py  telegram.py  webhook.py  wechat.py  whatsapp.py
core/github/: __init__.py  actions.py  client.py  codeowners.py  issues.py  prs.py  repos.py  search.py
core/image_gen/: __init__.py  generator.py
core/media/: __init__.py
core/memory/: __init__.py  store.py
core/orchestrator/: __init__.py  core.py
core/pdf/: __init__.py  editor.py  ocr.py  reader.py  writer.py
core/profiles/: __init__.py  loader.py  manager.py  profile.py
core/research/: __init__.py  arxiv.py  blogwatcher.py  llm_wiki.py  paper.py  polymarket.py  rss.py
core/security/: __init__.py  fs_sandbox.py  network_sandbox.py  signing.py
core/selfimprove/: __init__.py  change_tracker.py  critic.py  cross_session.py  diff_preview.py  executor.py  meta_agent.py  migrate_skills.py  rollback.py  safety_guardrails.py  skill_dependencies.py  skill_index.py  skill_loader.py  skill_metadata.py  skill_queue.py  skill_semantic.py
core/skills/: __init__.py  installer.py  registry.py  search.py
core/smarthome/: __init__.py  automation.py  devices.py  energy.py  hass.py  scenes.py
core/sms/: __init__.py  client.py
core/tools/: __init__.py  bus.py  git.py  tools_catalog.py
core/tui_extensions/: __init__.py  commands.py  history.py  palette.py  plugins.py  statusbar.py
core/utils/: action_cache.py  budget_guard.py  prompt_budget.py  rate_limiter.py  retry.py  step_pruner.py  token_counter.py
core/vision/: __init__.py  analyzer.py
core/voice/: __init__.py  processor.py  stt.py  tts.py
core/webhooks/: __init__.py  handlers.py  router.py  server.py  subscriptions.py
docs/: ARCHITECTURE.md  DESIGN_AUDIT.md  README.md  WIKI_ENHANCEMENTS.md  WIKI_ENHANCEMENTS_PHASE2.md  selfimprove-safety-plan.md
noman_tui/: app.py
tests/: test_wiki_enhancements.py
user/: config.toml
(+128 files in other folders)
