[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "core.context", "core.memory", "core.orchestrator"]

[project]
name = "noman-cli"
version = "0.1.0"
description = "A model-agnostic agentic coding CLI"
# readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli>=2.0;python_version<'3.11'",
    "structlog>=24.1",
    "textual>=0.50",
    "rich>=13.7",
    "click>=8.1",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "respx>=0.21",
]

[project.scripts]
noman = "cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D212",  # Multi-line docstring formatting
    "D401",  # First line of docstring mood
    "D413",  # Missing blank after section
    "B017",  # Blind exception catch
    "N818",  # Exception naming
    "SIM102", # Nested if statements
    "SIM103", # Simplifiable if
    "SIM105", # Try-except-pass
    "F841",  # Unused variable
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = false
warn_unreachable = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
